@@ -2,7 +2,7 @@ bin_PROGRAMS = yanoid
 
 SUBDIRS = ConsoleSource
 
-yanoid_SOURCES = more_entities.cc interprenter.cc \
+yanoid_SOURCES = soundmanager.cc more_entities.cc interprenter.cc \
                 game.cc map.cc entity.cc pixmap_entity.cc \
 		path.cc velocity.cc motion.cc \
 		display.cc client.cc \
@@ -15,7 +15,7 @@ yanoid_LDADD = ConsoleSource/libSDL_console.la
 
 # none of these are installed - here for dist
 
-noinst_HEADERS = more_entities.hh globals.hh interprenter.hh \
+noinst_HEADERS = soundmanager.hh more_entities.hh globals.hh interprenter.hh \
 		 map.hh point.hh entity.hh pixmap_entity.hh \
 		 path.hh game.hh velocity.hh motion.hh \
 		 display.hh client.hh \
