@@ -1,3 +1,9 @@
+2001-11-18  Mads Bondo Dydensborg  <madsdyd@mother>
+
+	* Sound
+	Added soundmanager
+	Added sound when a brick goes (should probably be scriptable)
+
 2001-11-17  Mads Bondo Dydensborg  <madsdyd@mother>
 
 	* Gameplay
